--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,10 @@ uuid = { version = "0.7", default-features = false }
 flate2 = { version = "1", optional = true }
 
 [dependencies.goblin]
-version = "0.0.22"
 default-features = false
 features = ["endian_fd", "elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive"]
-git = "https://github.com/m4b/goblin"
-rev = "e57f2d4e3a089dca89c63bcfc0dbde3e6d647f83"
+git = "https://github.com/wyxloading/goblin"
+rev = "91794f64fe7ddb2e88f24bfe183767c7bb6d8cdf"
 
 [dependencies.parity-wasm]
 version = "0.38.0"
